2014-June-29 Struan Robertson

	* DensityOfStates.h and all derived classes: Initial plumbing for variable cell sizes.

2014-June-29 Struan Robertson

	* UnitTests.cpp: For the linear algebra test, initialized data within the correct 
	template type constructor to correct errors in the smallest eigenvalue for the 
	dd and qd types, which should both be much closer to zero than 1.e-15.

2014-June-17 Struan Robertson

	* SimpleILT.cpp: Altered the simple ILT method to allow flux to be calculated from 
	the product side.

2014-June-12 Struan Robertson

	* MolecularComponents.cpp/.h: Alterations to reduce the amount of DOS re-calculation.

2014-June-09 Chris Morley

	* src/ConditionsManager.cpp,src/ConditionsManager.h,src/System.cpp, src/System.h:
	Allow one version of System::calculate() to loop for each bath gas mentioned
	in any <conditions> block.
	
	* src/plugins/AnalyticalRepresentation.cpp, schemas/mesmerPlugins.xsd: extra 
	keyword to do the above for Chebyshev fitting.

2014-June-05 Chris Morley

	* src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/plugins/HinderedRotorQM1D.cpp: add gStructure::exportToCML(). Extra
	parameters on various functions to pass in the PersistPtr where XML is written.
	Add ids to conformer molecules.

	* src/XMLPersist.h,src/Persistence.h,src/XMLPersist.cpp: add function to write
	an attribute containing a formatted number. Correct XLMWrite to write text
	when there is an empty element.

	* examples/Butyl_H_to_Butane/Butyl_H_to_Butane.xml: remove unused He to avoid
	error message.

	* schemas/mesmerPlugins.xsd: update

2014-June-01 Struan Robertson

	* MolecularComponents.cpp: Code added to suppress the in writing of the general
	inertia matrix. 
	* Miscellaneous changes relating to VC12.
	* Linux64 baseline updates.

2014-May-31 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorUtils.cpp, MolecularComponents.cpp/.h:
	Added member datum to account for the phase difference between the configuration 