@@ -1,3 +1,7 @@
+2014-July-01 Struan Robertson
+
+	* MolecularComponents.cpp/.h: Minor tidying of some gWellProperties methods.
+
 2014-June-29 Struan Robertson
 
 	* DensityOfStates.h and all derived classes: Initial plumbing for variable cell sizes.
